--- a/WebContent/lecture16.documentosJSP(JSPX)/documentoJSP.jspx
+++ b/WebContent/lecture16.documentosJSP(JSPX)/documentoJSP.jspx
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
-    <jsp:directive.page language="java"
-        contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" />
-    <jsp:text>
-        <![CDATA[ <?xml version="1.0" encoding="UTF-8" ?> ]]>
-    </jsp:text>
-    <jsp:text>
-        <![CDATA[ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> ]]>
-    </jsp:text>
-<html xmlns="http://www.w3.org/1999/xhtml">
+	<jsp:directive.page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" />
+	<jsp:text>
+		<![CDATA[ <?xml version="1.0" encoding="UTF-8" ?> ]]>
+	</jsp:text>
+	<jsp:text>
+		<![CDATA[ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> ]]>
+	</jsp:text>
+	<!-- Uso de declaraciones -->
+	<jsp:declaration>private int contadorVisitas = 1;</jsp:declaration>>
+	
+	<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Insert title here</title>
 </head>
-<body>
+<body bgcolor="yelow">
+	<h1>Ejemplo de un Documento JSPx</h1>
+
+	<!-- Ejemplo de salida de un texto -->
+	<jsp:text>Saludos desde un documento JSPx</jsp:text>
+
+	<br />
+
+	<!-- Ejemplo de una expresion -->
+	<p>Expresión Matemática: <%= 2*3 %></p>
+	
+	<!-- Ejemplo de un scriplet -->
+	<jsp:scriptlet> String nombreAplicacion = request.getContextPath();</jsp:scriptlet>
+	<p>Nombre de apliación: <%= nombreAplicacion %></p>
+	<p><%= this.contadorVisitas++ %></p>	
 
 </body>
-</html>
+	</html>
 </jsp:root>
